// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render with name 1`] = `
<Icon
  className=""
  inText={false}
  name="fire"
  title={null}
>
  <styled.span
    className="fa fa-fire"
    inText={false}
    title={null}
  >
    <span
      className="sc-AxjAm hEFEr fa fa-fire"
      title={null}
    />
  </styled.span>
</Icon>
`;

exports[`Icon should render with name and className 1`] = `
<Icon
  className="some-class"
  inText={false}
  name="fire"
  title={null}
>
  <styled.span
    className="some-class fa fa-fire"
    inText={false}
    title={null}
  >
    <span
      className="sc-AxjAm hEFEr some-class fa fa-fire"
      title={null}
    />
  </styled.span>
</Icon>
`;

exports[`Icon should render with name and inText 1`] = `
<Icon
  className=""
  inText={true}
  name="fire"
  title={null}
>
  <styled.span
    className="fa fa-fire"
    inText={true}
    title={null}
  >
    <span
      className="sc-AxjAm gMDvjq fa fa-fire"
      title={null}
    />
  </styled.span>
</Icon>
`;

exports[`Icon should render with name and title 1`] = `
<Icon
  className=""
  inText={false}
  name="fire"
  title="Fire"
>
  <styled.span
    className="fa fa-fire"
    inText={false}
    title="Fire"
  >
    <span
      className="sc-AxjAm hEFEr fa fa-fire"
      title="Fire"
    />
  </styled.span>
</Icon>
`;
